--- a/src/PayrollProcessing/View.fxml
+++ b/src/PayrollProcessing/View.fxml
@@ -1,25 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.Menu?>
-<?import javafx.scene.control.MenuBar?>
-<?import javafx.scene.control.MenuItem?>
-<?import javafx.scene.control.RadioButton?>
-<?import javafx.scene.control.Tab?>
-<?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="641.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="556.0" prefWidth="641.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <top>
       <TabPane prefHeight="400.0" prefWidth="641.0" tabClosingPolicy="UNAVAILABLE" BorderPane.alignment="CENTER">
         <tabs>
@@ -65,7 +51,7 @@
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="4">
                                  <children>
                                     <Label prefHeight="23.0" prefWidth="84.0" text="Annual Salary" />
-                                    <TextField prefHeight="27.0" prefWidth="215.0" />
+                                    <TextField prefHeight="27.0" prefWidth="218.0" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER_LEFT" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="5">
@@ -78,19 +64,28 @@
                               </HBox>
                               <HBox prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="6">
                                  <children>
-                                    <RadioButton mnemonicParsing="false" text="RadioButton" />
-                                    <RadioButton mnemonicParsing="false" text="RadioButton" />
-                                    <RadioButton mnemonicParsing="false" text="RadioButton" />
+                                    <RadioButton mnemonicParsing="false" prefWidth="120.0" text="Manager" />
+                                    <RadioButton mnemonicParsing="false" prefWidth="150.0" text="Department Head" />
+                                    <RadioButton mnemonicParsing="false" prefWidth="120.0" text="Director" />
                                  </children>
                               </HBox>
                               <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0" GridPane.columnIndex="1" GridPane.rowIndex="7">
                                  <children>
-                                    <Button mnemonicParsing="false" text="Button" />
-                                    <Button mnemonicParsing="false" text="Button" />
-                                    <Button mnemonicParsing="false" text="Button" />
+                                    <Button alignment="CENTER" maxWidth="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="140.0" text="Add Employee">
+                                       <HBox.margin>
+                                          <Insets right="25.0" />
+                                       </HBox.margin></Button>
+                                    <Button alignment="CENTER" maxWidth="200.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="140.0" text="Remove Employee">
+                                       <HBox.margin>
+                                          <Insets right="25.0" />
+                                       </HBox.margin></Button>
+                                    <Button alignment="CENTER" maxWidth="200.0" mnemonicParsing="false" prefWidth="140.0" text="Set Hours">
+                                       <HBox.margin>
+                                          <Insets right="25.0" />
+                                       </HBox.margin></Button>
                                  </children>
                               </HBox>
-                              <Button mnemonicParsing="false" text="Button" GridPane.rowIndex="7" />
+                              <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="70.0" text="Clear" translateX="40.0" GridPane.rowIndex="7" />
                            </children>
                         </GridPane>
                      </children>
@@ -101,26 +96,34 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <MenuBar layoutX="14.0" layoutY="55.0">
+                        <MenuBar layoutX="14.0" layoutY="51.0">
                           <menus>
                             <Menu mnemonicParsing="false" text="File">
                               <items>
-                                <MenuItem mnemonicParsing="false" text="Close" />
+                                <MenuItem mnemonicParsing="false" text="Import" />
+                                    <MenuItem mnemonicParsing="false" text="Export" />
+                                    <MenuItem mnemonicParsing="false" text="Serialization" />
+                                    <MenuItem mnemonicParsing="false" text="Deserialization" />
                               </items>
                             </Menu>
-                            <Menu mnemonicParsing="false" text="Edit">
+                            <Menu mnemonicParsing="false" text="Print">
                               <items>
-                                <MenuItem mnemonicParsing="false" text="Delete" />
+                                    <MenuItem mnemonicParsing="false" text="Default Print" />
+                                <MenuItem mnemonicParsing="false" text="Print by Department" />
+                                    <MenuItem mnemonicParsing="false" text="Print by Date" />
                               </items>
                             </Menu>
-                            <Menu mnemonicParsing="false" text="Help">
-                              <items>
-                                <MenuItem mnemonicParsing="false" text="About" />
-                              </items>
+                            <Menu mnemonicParsing="false" text="Payment">
+                                 <items>
+                                    <MenuItem mnemonicParsing="false" text="Calculate Payment" />
+                                 </items>
                             </Menu>
                           </menus>
                         </MenuBar>
-                        <Label layoutX="22.0" layoutY="27.0" text="Label" />
+                        <Label layoutX="14.0" layoutY="14.0" text="Select command from the Menu">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font></Label>
                      </children>
                   </AnchorPane>
             </content>
@@ -129,6 +132,6 @@
       </TabPane>
    </top>
    <right>
-      <TextArea prefHeight="172.0" prefWidth="432.0" BorderPane.alignment="CENTER" />
+      <TextArea prefHeight="151.0" prefWidth="474.0" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
