--- a/src/PayrollProcessing/View.fxml
+++ b/src/PayrollProcessing/View.fxml
@@ -109,8 +109,8 @@
                           <menus>
                             <Menu mnemonicParsing="false" text="File">
                               <items>
-                                <MenuItem fx:id="importMenu" mnemonicParsing="false" onAction="#importDatabase" text="Import" />
-                                    <MenuItem fx:id="exportMenu" mnemonicParsing="false" onAction="#exportDatabase" text="Export" />
+                                <MenuItem fx:id="importMenuItem" mnemonicParsing="false" onAction="#importDatabase" text="Import" />
+                                    <MenuItem fx:id="exportMenuItem" mnemonicParsing="false" onAction="#exportDatabase" text="Export" />
                                     <MenuItem mnemonicParsing="false" text="Serialization" />
                                     <MenuItem mnemonicParsing="false" text="Deserialization" />
                               </items>
