updatd fxcid + added methods for tab2 -tiffany

--- a/src/PayrollProcessing/View.fxml
+++ b/src/PayrollProcessing/View.fxml
@@ -117,14 +117,14 @@
                             </Menu>
                             <Menu mnemonicParsing="false" text="Print">
                               <items>
-                                    <MenuItem mnemonicParsing="false" text="Default Print" />
-                                <MenuItem mnemonicParsing="false" text="Print by Department" />
-                                    <MenuItem mnemonicParsing="false" text="Print by Date" />
+                                    <MenuItem fx:id="printMenuItem" mnemonicParsing="false" onAction="#printDatabase" text="Print" />
+                                <MenuItem fx:id="printByDepMenuItem" mnemonicParsing="false" onAction="#printDatabaseByDepartment" text="Print by Department" />
+                                    <MenuItem fx:id="printByDateMenuItem" mnemonicParsing="false" onAction="#printDatabaseByDate" text="Print by Date" />
                               </items>
                             </Menu>
                             <Menu mnemonicParsing="false" text="Payment">
                                  <items>
-                                    <MenuItem mnemonicParsing="false" text="Calculate Payment" />
+                                    <MenuItem fx:id="calcPaymentMenuItem" mnemonicParsing="false" onAction="#calcPayment" text="Calculate Payment" />
                                  </items>
                             </Menu>
                           </menus>
