--- a/src/PayrollProcessing/View.fxml
+++ b/src/PayrollProcessing/View.fxml
@@ -32,7 +32,7 @@
                               <Label alignment="CENTER_RIGHT" prefHeight="46.0" prefWidth="140.0" text="Name " />
                               <Label alignment="CENTER_RIGHT" prefHeight="50.0" prefWidth="140.0" text="Department" GridPane.rowIndex="1" />
                               <Label alignment="CENTER_RIGHT" prefHeight="44.0" prefWidth="140.0" text="Date Hired" GridPane.rowIndex="2" />
-                              <DatePicker fx:id="dateHired" prefHeight="27.0" prefWidth="299.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                              <DatePicker fx:id="dateHired" editable="false" prefHeight="27.0" prefWidth="299.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                               <TextField fx:id="empName" alignment="CENTER" maxWidth="300.0" prefHeight="27.0" prefWidth="300.0" GridPane.columnIndex="1" />
                               <HBox alignment="CENTER_LEFT" prefHeight="10.0" prefWidth="456.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
                                  <children>
@@ -141,6 +141,6 @@
       </TabPane>
    </top>
    <right>
-      <TextArea fx:id="show1" prefHeight="151.0" prefWidth="474.0" BorderPane.alignment="CENTER" />
+      <TextArea fx:id="show1" editable="false" prefHeight="151.0" prefWidth="474.0" BorderPane.alignment="CENTER" />
    </right>
 </BorderPane>
